--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,22 @@ services:
     - bot-variables.env
     image: gcr.io/instagrambot-273500/github.com/denovopress/instabotlol:latest
     ports:
-      - "8000:80"
+      - "81:8000"
+
   watchtower:
     image: containrrr/watchtower
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     command: --interval 30
+
+  portainer:
+    image: portainer/portainer
+    ports:
+      - "80:9000"
+      - "8000:8000"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer_data:/data
+
+volumes:
+  portainer_data:
