--- a/bot-variables.env.example
+++ b/bot-variables.env.example
@@ -1,3 +1,13 @@
 USER=instaUser
 PASS=instaUserP455
 SIMULATION=False
+
+PORTAINER_DOMAIN=""
+EMAIL=""
+# Set staging to 1 if you're testing your setup to avoid hitting request limits
+staging=0
+
+# No real need to edit past these lines
+DOMAINS=(${PORTAINER_DOMAIN} www.${PORTAINER_DOMAIN})
+RSA_KEY_SIZE=4096
+DATA_PATH="./data/certbot"
