--- a/opt/nginx/app.conf.template
+++ b/opt/nginx/app.conf.template
@@ -6,6 +6,13 @@ server {
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
+    
+    location /_healthz {
+        proxy_pass  http://localhost:81;
+        proxy_set_header    Host                ${DOLLAR}http_host;
+        proxy_set_header    X-Real-IP           ${DOLLAR}remote_addr;
+        proxy_set_header    X-Forwarded-For     ${DOLLAR}proxy_add_x_forwarded_for;
+    }
 
     location / {
         return 301 https://${DOLLAR}host${DOLLAR}request_uri;
@@ -22,8 +29,19 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+    
+    location /_healthz {
+        proxy_pass  http://localhost:81;
+        proxy_set_header    Host                ${DOLLAR}http_host;
+        proxy_set_header    X-Real-IP           ${DOLLAR}remote_addr;
+        proxy_set_header    X-Forwarded-For     ${DOLLAR}proxy_add_x_forwarded_for;
+    }
+    
     location / {
-        proxy_pass  http://${PORTAINER_DOMAIN};
+        proxy_pass  http://localhost:9000;
         proxy_set_header    Host                ${DOLLAR}http_host;
         proxy_set_header    X-Real-IP           ${DOLLAR}remote_addr;
         proxy_set_header    X-Forwarded-For     ${DOLLAR}proxy_add_x_forwarded_for;
