--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
   nginx:
     image: nginx:1.15-alpine
     restart: unless-stopped
+    env_file:
+    - bot-variables.env
     volumes:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
@@ -42,6 +44,8 @@ services:
   certbot:
     image: certbot/certbot
     restart: unless-stopped
+    env_file:
+    - bot-variables.env
     volumes:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
