--- a/bot-variables.env.example
+++ b/bot-variables.env.example
@@ -5,7 +5,7 @@ SIMULATION=False
 PORTAINER_DOMAIN=""
 EMAIL=""
 # Set staging to 1 if you're testing your setup to avoid hitting request limits
-staging=0
+STAGING=0
 
 # No real need to edit past these lines
 DOMAINS=(${PORTAINER_DOMAIN} www.${PORTAINER_DOMAIN})
